--- a/pages/auth/index.html
+++ b/pages/auth/index.html
@@ -21,63 +21,133 @@
    body {
     font-family: "Poppins", sans-serif;
    }
-   .card {
-    transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition */
+   .main-card {
+    background: white;
+    border-radius: 1rem;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+    padding: 2rem;
+    max-width: 1000px;
+    width: 100%;
+    margin: auto;
    }
-   .card:hover {
-    transform: translateY(-5px); /* Lift effect on hover */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Enhanced shadow */
+   .role-card {
+    transition: all 0.3s ease;
+    cursor: pointer;
+    border: 2px solid transparent;
    }
-   .card-title {
-    font-size: 1.5rem; /* Increased font size */
+   .role-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
    }
-   .card-text {
-    font-size: 1rem; /* Increased font size */
+   .role-card.selected {
+    background-color: rgba(13, 110, 253, 0.05);
+    border-color: #0d6efd;
+   }
+   .role-card.selected .card-title,
+   .role-card.selected .card-text,
+   .role-card.selected i {
+    color: #0d6efd !important;
+   }
+   .continue-btn {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.3s ease;
+    pointer-events: none;
+   }
+   .continue-btn.show {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
    }
   </style>
  </head>
  <body class="vh-100 d-flex align-items-center justify-content-center bg-light">
-  <div class="container text-center">
-   <!-- Header -->
-   <div class="mb-5">
-    <img
-     src="../../assets/images/bxu-logo.png"
-     alt="BXU Logo"
-     class="img-fluid mb-3"
-     style="max-width: 150px"
-    />
-    <h2 class="mb-4">BXU Business Authority Sentinel</h2>
-    <p class="text-muted">Select your role to continue</p>
-   </div>
+  <div class="main-card">
+   <div class="container text-center">
+    <!-- Header -->
+    <div class="mb-5">
+     <!-- <img
+      src="../../assets/images/bxu-logo.png"
+      alt="BXU Logo"
+      class="img-fluid mb-3"
+      style="max-width: 150px"
+     /> -->
+     <h2 class="mb-4">BXU Business Authority Sentinel</h2>
+     <p class="text-muted">Select your role to continue</p>
+    </div>
 
-   <!-- Role Selection Cards -->
-   <div class="row justify-content-center g-4">
-    <div class="col-md-4">
-     <a href="adminLogin.html" class="text-decoration-none">
-      <div class="card h-100 shadow-sm rounded-4 hover-overlay">
+    <!-- Role Selection Cards -->
+    <div class="row justify-content-center g-4">
+     <div class="col-md-4">
+      <div
+       class="card role-card w-100 shadow-sm rounded-4"
+       data-role="admin"
+       onclick="selectRole(this, 'adminLogin.html')"
+      >
        <div class="card-body text-center p-5">
-        <i class="bi bi-person-workspace fs-1 mb-3 text-primary"></i>
+        <i class="bi bi-person-workspace fs-1 mb-3 text-muted"></i>
         <h4 class="card-title">Administrator</h4>
         <p class="card-text text-muted">System management and oversight</p>
        </div>
       </div>
-     </a>
-    </div>
+     </div>
 
-    <div class="col-md-4">
-     <a href="inspectorLogin.html" class="text-decoration-none">
-      <div class="card h-100 shadow-sm rounded-4 hover-overlay">
+     <div class="col-md-4">
+      <div
+       class="card role-card w-100 shadow-sm rounded-4"
+       data-role="inspector"
+       onclick="selectRole(this, 'inspectorLogin.html')"
+      >
        <div class="card-body text-center p-5">
-        <i class="bi bi-clipboard-check fs-1 mb-3 text-primary"></i>
+        <i class="bi bi-clipboard-check fs-1 mb-3 text-muted"></i>
         <h4 class="card-title">Inspector</h4>
         <p class="card-text text-muted">Field operations and reporting</p>
        </div>
       </div>
-     </a>
+     </div>
+    </div>
+
+    <!-- Continue Button -->
+    <div class="mt-4">
+     <button
+      id="continueBtn"
+      class="btn btn-primary btn-lg continue-btn"
+      onclick="proceedToLogin()"
+     >
+      Continue <i class="bi bi-arrow-right"></i>
+     </button>
     </div>
    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+   let selectedRole = null;
+   let selectedPath = null;
+
+   function selectRole(element, path) {
+    // Remove selected class from all cards
+    document.querySelectorAll(".role-card").forEach((card) => {
+     card.classList.remove("selected");
+    });
+
+    // Add selected class to clicked card
+    element.classList.add("selected");
+
+    // Show continue button
+    const continueBtn = document.getElementById("continueBtn");
+    continueBtn.classList.add("show");
+
+    // Store selected role and path
+    selectedRole = element.dataset.role;
+    selectedPath = path;
+   }
+
+   function proceedToLogin() {
+    if (selectedPath) {
+     window.location.href = selectedPath;
+    }
+   }
+  </script>
  </body>
 </html>
